add header and style

--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@ body {
     background-color: darkblue;
     color: aliceblue;
 }
+
+header {
+    text-align: center;
+    padding: 10px;
+    color: aliceblue;
+}
